# tracer

./: .clang-format  .gitignore  CMakeLists.txt  README.md
perf/: README.md
report/: README.md
src/: CMakeLists.txt  main.cpp  vec3.h
src/materials/: CMakeLists.txt  dielectric.h  diffuse_light.h  iridescent.h  lambertian.h  material.h  metal.h  scratched_metal.h
src/objects/: CMakeLists.txt  aabb.h  bvh.h  hittable.h  hittable_list.h  quad.h  sphere.h
src/textures/: CMakeLists.txt  checker_texture.h  image_asset.h  image_texture.h  scratch.h  scratch_texture.h  texture.h
src/utils/: CMakeLists.txt  camera.h  color.h  concurrency.cpp  concurrency.h  constants.h  copyable.h  interval.h  io.h  pixel_map.h  point2.h  random.h  ray.h  scenes.cpp  scenes.h  vec3.h
src/utils/tests/: CMakeLists.txt  tst_ray.cpp  tst_vec3.cpp
tests/: CMakeLists.txt  tst_vec3.cpp
